--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+  
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+<title>Navbar</title>
 </head>
 <body>
-    <p>hello</p>
+<div class="navbar">
+  <div class=nav-logo>Logo</div>
+  <a href="#" class="toggle-button">
+    <span class="bar"></span>
+    <span class="bar"></span>
+    <span class="bar"></span>
+  </a>
+  <div class="nav-link">
+    <ul>
+      <li><a href=#>Home</a></li>
+       <li><a href=#>about</a></li>
+       <li><a href=#>contactUs</a></li>
+    </ul>
+  </div>
+</div>
 </body>
 </html>
